--- a/css/eventos.css
+++ b/css/eventos.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     border: 0;
-     -webkit-tap-highlight-color: rgba(0,0,0,0);
+     -webkit-tap-highlight-color: rgba(0,0,0,0);}
 
-}
 body{
-     background: #0d0d0d;
+          margin: 0 auto;
+          background: #0d0d0d;
+          height: 700px;
 }
 .menu{
 background-color: red;
@@ -38,3 +39,27 @@ margin-bottom: 25px;
 box-shadow: 0 0 15px rgba(0,0,0,0.5);
 cursor: pointer;
 }
+.garageplay{
+     position: absolute;
+     left: 50%;
+     transform: translateX(-50%);
+     top: 33px;
+}
+.container-video{
+     width: 90%;
+     position: relative;
+     margin: 0 auto;
+     margin-top:100px;
+     display: grid;
+     text-align: center;
+     grid-gap: 15px;
+     color: #fff;
+     font-family: 'Montserrat', sans-serif;
+     font-size: 8px;
+     z-index: -10;
+     }
+     
+     .container-video img{
+     max-width: 100%;
+     border-radius: 15px;
+     }
