--- a/css/login.css
+++ b/css/login.css
@@ -20,7 +20,7 @@ body{
           transform: translateX(-50%);
               display: flex;
               background-size: cover;
-              top:300px;
+              top:270px;
               z-index: -1;
       }
 
@@ -53,7 +53,7 @@ margin-top: 100px;
   align-items: center;
 }
 /* content que contem os formulários */
-.content{
+.container{
   width: 100vw;
           height: 100vh;
          display: flex;
@@ -112,7 +112,7 @@ margin-top: 45px;
 transform: translateX(-50%);
  white-space: nowrap 
 }
-input:not([type="checkbox"]){
+input{
   margin: 0 auto;
   display: grid;
   left: 50%;
@@ -122,7 +122,7 @@ box-sizing: border-box;
 text-align: center;
 border-radius: 25px;
 color: #262626;
-padding: 12px 20px;
+padding: 4% 4%;
 margin-top: 20px;
 font-size: 20px;  
 
@@ -131,7 +131,7 @@ font-size: 20px;
   margin-top: 200px;
 }
 /*estilo do botão submit */
-input[type="submit"]{
+button[type="submit"]{
   margin: 0 auto;
   display: grid;
   left: 50%;
@@ -167,19 +167,50 @@ input[type="submit"]:hover{
   -webkit-border-radius: 0 0  5px 5px;
   border-radius: 0 0  5px 5px;
 }
-.cadastro{
+#btnLogout{
   width: 50%;
-  height: 60px;
+  height: 40px;
+  font-size: 18px;
   font-weight: bold;
-  background: #f7f8f1;
+  background: #262626;
   padding: 6px;
   margin-left:0px;
-  font-weight: bold;
   -webkit-border-radius: 4px;
-  border-radius: 4px;  
-
+  border-radius: 15px;  
+  margin-top: 210px;
   -webkit-transition: all 0.4s linear;
   transition: all 0.4s  linear;
+  font-family: 'Montserrat', sans-serif;
+}
+#btnSignUp{
+  width: 50%;
+  height: 40px;
+  background: #262626;
+  padding: 6px;
+  margin-left:0px;
+  -webkit-border-radius: 4px;
+  border-radius: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 150px;
+  -webkit-transition: all 0.4s linear;
+  transition: all 0.4s  linear;
+  font-family: 'Montserrat', sans-serif;
+}
+#btnLogin{
+  width: 50%;
+  height: 40px;
+  background: #262626;
+  padding: 6px;
+  margin-left:0px;
+  font-size: 18px;
+  font-weight: bold;
+  -webkit-border-radius: 4px;
+  border-radius: 15px;  
+margin-top: 90px;
+  -webkit-transition: all 0.4s linear;
+  transition: all 0.4s  linear;
+  font-family: 'Montserrat', sans-serif;
 }
 .link a:hover {
   color: #39bfd7;
